# auth-service

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 0f2fd3b779e7_create_sessions_table.py  7b2f22bb7085_create_users_table.py  d704e349dc90_add_user_role_enum_constraint.py
app/: enums.py  main.py  schemas.py  utils.py
app/api/: auth.py
app/core/: config.py  redis.py
app/db/: database.py  models.py
app/middleware/: logging.py
app/services/: race_condition_service.py  refresh_rotation_service.py  session_service.py  token_service.py  user_service.py
